--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,4 @@
-version: '3.8'
-
 services:
-  # PostgreSQL database for Keycloak
-  postgres:
-    image: postgres:15-alpine
-    container_name: payforward-postgres
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: keycloak_password
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - payforward-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U keycloak"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  # Keycloak for authentication
-  keycloak:
-    image: quay.io/keycloak/keycloak:23.0
-    container_name: payforward-keycloak
-    command: start-dev
-    environment:
-      KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: keycloak_password
-      KC_HOSTNAME: localhost
-      KC_HOSTNAME_PORT: 8180
-      KC_HOSTNAME_STRICT: "false"
-      KC_HOSTNAME_STRICT_HTTPS: "false"
-      KC_LOG_LEVEL: info
-      KC_METRICS_ENABLED: "true"
-      KC_HEALTH_ENABLED: "true"
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    ports:
-      - "8180:8080"
-      - "8543:8443"
-    depends_on:
-      postgres:
-        condition: service_healthy
-    networks:
-      - payforward-network
-    healthcheck:
-      test: ["CMD-SHELL", "exec 3<>/dev/tcp/localhost/8080 && echo -e 'GET /health/ready HTTP/1.1\\r\\nHost: localhost\\r\\n\\r\\n' >&3 && cat <&3 | grep -q '200 OK'"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 60s
-
   # Neo4j graph database
   neo4j:
     image: neo4j:5.15-community
@@ -106,8 +52,6 @@ services:
     depends_on:
       neo4j:
         condition: service_healthy
-      keycloak:
-        condition: service_healthy
     networks:
       - payforward-network
     restart: unless-stopped
@@ -144,7 +88,8 @@ services:
 
 networks:
   payforward-network:
-    driver: bridge
+    name: payforward-network
+    external: true
 
 volumes:
   postgres_data:
